syntax = "proto3";

package world;

option java_multiple_files = true;
option java_package = "com.chocolatada.world.grpc";
option java_outer_classname = "EnemyProto";

enum EnemyType {
  ENEMY_TYPE_UNSPECIFIED = 0;
  NORMAL = 1;
  ELITE = 2;
  BOSS = 3;
  MINIBOSS = 4;
  LEGENDARY = 5;
}

message Enemy {
  int64 id = 1;
  string name = 2;
  string description = 3;
  EnemyType type = 4;
  int32 level = 5;
  int32 experience = 6;
  int32 gold = 7;
  float crit_rate = 8;
  float crit_damage = 9;
  int32 atk = 10;
  int32 def = 11;
  int32 stamina = 12;
  int32 accuracy = 13;
  int32 evasion = 14;
}

message GetEnemyByIdRequest {
  int64 enemy_id = 1;
}

message GetEnemyResponse {
  Enemy enemy = 1;
}

service EnemyService {
  rpc GetEnemyById(GetEnemyByIdRequest) returns (GetEnemyResponse);
}

